Fixed unreadable text

--- a/css/main.css
+++ b/css/main.css
@@ -147,10 +147,6 @@ h1.title{
     text-shadow: 0px 10px 0px #db5945;
 }
 
-.article_footer{
-    color:gray;
-}
-
 .img{
     background:rgb(39, 20, 20);
 }
